# IvoireChain

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs
src/domain/entities/: lottery_draw.rs  mod.rs  ticket.rs  transaction.rs  user.rs
src/domain/repositories/: mod.rs
src/domain/services/: mod.rs
src/domain/value_objects/: mod.rs  money.rs  phone_number.rs  ticket_numbers.rs
src/infrastructure/: mod.rs
src/infrastructure/blockchain/: mod.rs
src/infrastructure/cache/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/payments/: mod.rs  mtn_mobile_money.rs  orange_money.rs  wave.rs
src/shared/: dto.rs  errors.rs  mod.rs  utils.rs
