[package]
name = "IvoireChain"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework & Async Runtime
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }


# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenv = "0.15"

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"

# Error Handling
thiserror = "1"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }


# Utilities
uuid = { version = "1", features = ["v4","serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"

# Phone number validation
phonenumber = "0.3"

# Hex encodin for blockchain
hex = "0.4"
random = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
rstest = "0.18"

[profile.release]



